      Mahogany, you can use it to find all important changes between releases.
      Please refer to the cvs update list archives for the even more detailed
      list of all changes.

      See at the end of file for the list of contributors (initials appearing
      in the second column of the changelog below).

Release 0.67 'Constance' ??? ??, 2005
-------------------------------------

2005-05-15 VZ: added autocollecting of addresses in outgoing mail
2005-02-27 VZ: added "Compose|Set if is a reply..." command
2004-09-27 VZ: allow to select "open as mail message" in "Open with" dialog
2004-09-23 VZ: improved UTF-[78] support: try to guess correct encoding
2004-09-18 VZ: implemented support for Python functions in message templates
2004-09-13 VZ: added "Folder|Where is filter..." command
2004-08-13 VZ: "Show MIME Structure" allows to save multiple attachments at once
2004-07-17 VZ: full support for showing PGP/MIME encoded messages
2004-07-17 VZ: added "Send now" command to the composer "Compose" menu
2004-07-16 VZ: show threading indicator in the status column
2004-07-12 VZ: use plain, not encrypted, text in replies to PGP messages
2004-07-11 VZ: integrated DSPAM statistical spam filter
2004-07-06 VZ: "Set From from To" option now behaves more usefully
2004-07-02 VZ: added nop() filter action (stop processing the filter program)
2004-05-15 VZ: added spam filter for dangerous (executable) attachments
2004-05-14 XN: added support for uuencoded attachments
2004-05-12 VZ: fixed bug with slashes and colons not working in the user names
2004-04-22 VZ: improved signature/trailer detection when replying to messages
2004-04-21 VZ: show subfolders not in the tree in bold in browse subfolders dialog
2004-04-20 VZ: added "--import" command line option
2004-04-19 VZ: made "Quick filter" dialog slightly easier to use
2004-04-08 VZ: close the message view window if underlying message is deleted
2004-03-14 VZ: highlight the options with non default values in the options dialog