@@ -314,6 +314,10 @@ const MOption MP_INLINE_GFX_EXTERNAL;
 const MOption MP_INLINE_GFX_SIZE;
 const MOption MP_MSGVIEW_SHOWBAR;
 const MOption MP_MSGVIEW_VIEWER;
+const MOption MP_MSGVIEW_AUTO_VIEWER;
+const MOption MP_MSGVIEW_PREFER_HTML;
+const MOption MP_MSGVIEW_ALLOW_HTML;
+const MOption MP_MSGVIEW_ALLOW_IMAGES;
 const MOption MP_MSGVIEW_HEADERS;
 const MOption MP_MSGVIEW_ALL_HEADERS;
 const MOption MP_MSGVIEW_DEFAULT_ENCODING;
@@ -726,6 +730,10 @@ static const MOptionData MOptions[] =
     DEFINE_OPTION(MP_INLINE_GFX_SIZE),
     DEFINE_OPTION(MP_MSGVIEW_SHOWBAR),
     DEFINE_OPTION(MP_MSGVIEW_VIEWER),
+    DEFINE_OPTION(MP_MSGVIEW_AUTO_VIEWER),
+    DEFINE_OPTION(MP_MSGVIEW_PREFER_HTML),
+    DEFINE_OPTION(MP_MSGVIEW_ALLOW_HTML),
+    DEFINE_OPTION(MP_MSGVIEW_ALLOW_IMAGES),
     DEFINE_OPTION(MP_MSGVIEW_HEADERS),
     DEFINE_OPTION(MP_MSGVIEW_ALL_HEADERS),
     DEFINE_OPTION(MP_MSGVIEW_DEFAULT_ENCODING),
